--- a/index.html
+++ b/index.html
@@ -27,34 +27,30 @@
     </header>
 
     <div class="container">
-      <section id="main_content">
+      <section id="comments_session">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+            <a id="comments" class="anchor" href="#comments" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comments</h3>
+        </h3>
+        <div>
+            <p>De <a href="https://github.com/patymori" class="user-mention">@patymori</a>:</p>
+            <p>
+                Obrigada, <a href="https://github.com/MariaLabHackerspace" class="user-mention">@MariaLabHackerspace</a>, pela maravilhosa oficina de Git e GitHub! Agora é botar a mão na massa! <3
+            </p>
+        </div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+        <hr>
+        
+        <div>
+            <p>De <a href="https://github.com/lieechan" class="user-mention">@lieechan</a> <small>aka Juliana Neres</small>:</p>
+            <p>
+                Foi dificil fazer esse pull request hein, vou te falar (risos). Quebrei a cabeça com o remote upstream pra atualizar, mas aqui estamos. </p>
+            <p>
+                Quero agradecer as meninas da <a href="https://github.com/MariaLabHackerspace" class="user-mention">@MariaLabHackerspace</a> pela oficina, dizer que estou aguardando ansiosamente pelas próximas (me chama que eu vou <3) e dizer também que tenho vontade de no futuro me candidatar como voluntária (como faz?). Beijos e até a próxima !
+            </p>
+        </div>
       </section>
+
     </div>
 
-    
   </body>
 </html>
